fix: logical properties for text-align in footer
Refs: CD-453

--- a/components/cd/cd-footer/cd-footer-copyright.css
+++ b/components/cd/cd-footer/cd-footer-copyright.css
@@ -16,11 +16,7 @@
     justify-content: flex-end;
     margin: 0;
     margin-top: 34px; /* Align with provide-by main text. */
-    text-align: right;
-  }
-
-  [dir=rtl] .cd-footer-copyright {
-    text-align: left;
+    text-align: end;
   }
 }
 
